--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     background-image: url(../images/coral\ ecosystems\ reeffish.jpg);
     background-repeat: no-repeat;
     height: 40vh;
-    width: 100vw;
+    width: 100%;
     background-size: 100% 130%;
   }
 
